syntax = "proto3";
option go_package = "/api";
package api;

import "google/protobuf/empty.proto";

service Users {
  rpc Get(google.protobuf.Empty) returns (UserList){}
  rpc Add(AddRequest) returns (AddResponse){}
  rpc Remove(RemoveRequest) returns (google.protobuf.Empty){}
}

message UserList {
  repeated User users = 1;
}

message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
}

message AddRequest {
  string name = 1;
  string email = 2;
}

message RemoveRequest {
  int64 id = 1;
}

message AddResponse {
  int64 id = 1;
}